tweaking the docs, adding MIT license

--- a/views/about.erb
+++ b/views/about.erb
@@ -41,6 +41,6 @@
   <% end %>
 
   <p>You can learn more about the technical details and see the code
-	<a href="/code">here</a></p>
+	<a href="http://github.com/muffinista/twitter-rss-digest">here</a></p>
 </div>
 
