--- a/views/layout.erb
+++ b/views/layout.erb
@@ -46,7 +46,7 @@
 <div id="footer">
     <div>
         <small>&copy; 2010 muffinlabs.com</small>
-		<a href='/code'>code</a>
+		<a href='http://github.com/muffinista/twitter-rss-digest'>code</a>
     </div>
 </div>
 
