--- a/views/about.erb
+++ b/views/about.erb
@@ -1,7 +1,7 @@
 <h2>About</h2>
 <div id="about">
   <p>WhalePail is a simple app to generate RSS feeds for a variety of
-	Twtitter data.  You plug in a few parameters, and get back an RSS
+	Twitter data.  You plug in a few parameters, and get back an RSS
 	feed, which you can then check whenever you want.  The feed is in
 	digest form, meaning that each entry will be a day's worth of
 	tweets, instead of getting one post per tweet.  This is handy
