--- a/views/about.erb
+++ b/views/about.erb
@@ -38,6 +38,12 @@
 	<div id="connect_button">
       <a href="/connect"><img src="sign_in_with_twitter.gif" border="0" /></a>
 	</div>
+
+	<p><b>NOTE:</b> We aren't asking for you to authorize via Twitter
+	  so that we can send one of those obnoxious auto-tweets -- it's just 
+	  a quick and easy way to setup an account.
+	</p>
+
   <% end %>
 
   <p>You can learn more about the technical details and see the code
