--- a/views/layout.erb
+++ b/views/layout.erb
@@ -45,7 +45,7 @@
 
 <div id="footer">
     <div>
-        <small>&copy; 2011 <a http="http://muffinlabs.com/">muffinlabs.com</a></small>
+        <small>&copy; 2011 <a href="http://muffinlabs.com/">muffinlabs.com</a></small>
 		<a href='http://github.com/muffinista/twitter-rss-digest'>code</a>
     </div>
 </div>
